Fix marquee white space issue on smaller screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -1571,6 +1571,11 @@ code, pre {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
